Load test dependencies in qunit

--- a/test/test.html
+++ b/test/test.html
@@ -11,6 +11,10 @@
   </div>
 
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
+  <script src="../bower_components/es5-basic-shim/src/shim.js"></script>
+  <script src="../bower_components/WeakMap/WeakMap.js"></script>
+  <script src="../bower_components/MutationObserver/MutationObserver.js"></script>
+  <script src="../bower_components/CustomElements/custom-elements.js"></script>
   <script src="../local-time-element.js"></script>
   <script src="./test.js"></script>
 </body>
