Separate from now tests

--- a/test/test.html
+++ b/test/test.html
@@ -29,6 +29,7 @@
     }
   </script>
   <script src="./test.js"></script>
+  <script src="./from-now.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
