Split up other test cases too

--- a/test/test.html
+++ b/test/test.html
@@ -28,7 +28,8 @@
       var yearAfterEpochLocalDate = '1971-01-01';
     }
   </script>
-  <script src="./test.js"></script>
+  <script src="./constructor.js"></script>
+  <script src="./format.js"></script>
   <script src="./from-date.js"></script>
   <script src="./from-now.js"></script>
   <script src="./title-format.js"></script>
