--- a/test/test.html
+++ b/test/test.html
@@ -30,7 +30,7 @@
   </script>
   <script src="./constructor.js"></script>
   <script src="./format.js"></script>
-  <script src="./from-now.js"></script>
+  <script src="./format-relative.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
