Rename main script

--- a/examples/polymer.html
+++ b/examples/polymer.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Polymer &lt;local-time&gt;</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/polymer/0.2.2/platform.js"></script>
-  <script src="../local-time-element.js"></script>
+  <script src="../time-elements.js"></script>
 </head>
 <body>
   <p>
