--- a/test/test.html
+++ b/test/test.html
@@ -13,7 +13,7 @@
   <script src="../bower_components/MutationObserver/MutationObserver.js"></script>
   <script src="../bower_components/CustomElements/custom-elements.js"></script>
 
-  <script src="../local-time-element.js"></script>
+  <script src="../time-elements.js"></script>
 
   <script src="../bower_components/qunit/qunit/qunit.js"></script>
   <script>
