Fix test module names

--- a/test/test.html
+++ b/test/test.html
@@ -28,8 +28,8 @@
     }
   </script>
   <script src="./constructor.js"></script>
-  <script src="./format.js"></script>
-  <script src="./format-relative.js"></script>
+  <script src="./local-time.js"></script>
+  <script src="./relative-time.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
