Add time-ago tests.

--- a/test/test.html
+++ b/test/test.html
@@ -30,6 +30,7 @@
   <script src="./constructor.js"></script>
   <script src="./local-time.js"></script>
   <script src="./relative-time.js"></script>
+  <script src="./time-ago.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
