Added tests for relative-time-to-go and time-to-go elements and just-now attribute

--- a/test/test.html
+++ b/test/test.html
@@ -30,7 +30,9 @@
   <script src="./constructor.js"></script>
   <script src="./local-time.js"></script>
   <script src="./relative-time.js"></script>
+  <script src="./relative-time-to-go.js"></script>
   <script src="./time-ago.js"></script>
+  <script src="./time-to-go.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
