Add time-until specific tests

--- a/test/test.html
+++ b/test/test.html
@@ -31,6 +31,7 @@
   <script src="./local-time.js"></script>
   <script src="./relative-time.js"></script>
   <script src="./time-ago.js"></script>
+  <script src="./time-until.js"></script>
   <script src="./title-format.js"></script>
 </body>
 </html>
