Refactor as ES modules with rollup

--- a/examples/polymer.html
+++ b/examples/polymer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.23/webcomponents.min.js"></script>
-  <script src="../time-elements.js"></script>
+  <script src="../dist/time-elements-legacy.js"></script>
 </head>
 <body>
   <h2>Past Date</h2>
