--- a/test/test.html
+++ b/test/test.html
@@ -9,7 +9,7 @@
   <div id="mocha"></div>
 
   <script src="../node_modules/webcomponents.js/webcomponents.js"></script>
-  <script src="../time-elements.js"></script>
+  <script src="../dist/time-elements-legacy.js"></script>
   <script src="../node_modules/chai/chai.js"></script>
   <script src="../node_modules/mocha/mocha.js"></script>
   <script>
