Avoid including Shady DOM/CSS and get template polyfill independently

--- a/examples/polymer.html
+++ b/examples/polymer.html
@@ -2,9 +2,14 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <!-- For Reflect.construct -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.34.2/es6-shim.min.js"></script>
+  <!-- For CustomEvent -->
   <script type="text/javascript" src="https://unpkg.com/@webcomponents/webcomponents-platform@1.0.0/webcomponents-platform.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.22/webcomponents-lite.js"></script>
+  <!-- For Template -->
+  <script type="text/javascript" src="https://unpkg.com/@webcomponents/template@1.2.2/template.js"></script>
+  <!-- For HTML Imports and Custom Elements -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.22/webcomponents-hi-ce.js"></script>
 </head>
 <body>
   <h2>Past Date</h2>
