--- a/examples/index.html
+++ b/examples/index.html
@@ -118,8 +118,8 @@
       Oops! This browser doesn't support Web Components.
     </time-until>
   </p>
-  <script type="module" src="../dist/index.js"></script>
-  <!-- <script type="module" src="https://unpkg.com/@github/time-elements@latest?module"></script> -->
+  <!-- <script type="module" src="../dist/index.js"></script> -->
+  <script type="module" src="https://unpkg.com/@github/time-elements@latest?module"></script>
   <script>
     document.body.addEventListener('relative-time-updated', event => {
       console.log('event from', event.target, event)
