Fix example index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -134,8 +134,8 @@
     </time-until>
   </p>
 
-  <script type="module" src="../dist/index.js"></script>
-  <!-- <script type="module" src="https://unpkg.com/@github/time-elements@latest?module"></script> -->
+  <!-- <script type="module" src="../dist/index.js"></script> -->
+  <script type="module" src="https://unpkg.com/@github/time-elements@latest?module"></script>
   <script>
     document.body.addEventListener('relative-time-updated', event => {
       console.log('event from', event.target, event)
