fix: fixes examples include to relative-time-element

--- a/examples/index.html
+++ b/examples/index.html
@@ -186,7 +186,7 @@
   </p>
 
   <!-- <script type="module" src="../dist/index.js"></script> -->
-  <script type="module" src="https://unpkg.com/@github/time-elements@latest?module"></script>
+  <script type="module" src="https://unpkg.com/@github/relative-time-element@4.1.2/dist/bundle.js"></script>
   <script>
     document.body.addEventListener('relative-time-updated', event => {
       console.log('event from', event.target, event)
