--- a/examples/index.html
+++ b/examples/index.html
@@ -192,8 +192,8 @@
     </relative-time>
   </p>
 
-  <script type="module" src="../dist/index.js"></script>
-  <!-- <script type="module" src="https://unpkg.com/@github/relative-time-element@latest/dist/bundle.js"></script> -->
+  <!-- <script type="module" src="../dist/index.js"></script> -->
+  <script type="module" src="https://unpkg.com/@github/relative-time-element@latest/dist/bundle.js"></script>
   <script>
     document.body.addEventListener('relative-time-updated', event => {
       console.log('event from', event.target, event)
