--- a/examples/index.html
+++ b/examples/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-prefers-absolute-time="true">
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>time elements</title>
@@ -208,8 +208,8 @@
     </relative-time>
   </button>
 
-  <script type="module" src="../dist/index.js"></script>
-  <!-- <script type="module" src="https://unpkg.com/@github/relative-time-element@latest/dist/bundle.js"></script> -->
+  <!-- <script type="module" src="../dist/index.js"></script> -->
+  <script type="module" src="https://unpkg.com/@github/relative-time-element@latest/dist/bundle.js"></script>
   <script>
     document.body.addEventListener('relative-time-updated', event => {
       console.log('event from', event.target, event)
